--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -14,20 +14,18 @@ body{
     background: #e9e9e9;
 }
 /*****************Login styling***********************************/
-.wrapper {
-    margin-top: 80px;
-    margin-bottom: 80px;
+.login-padding{
+    margin-top: 100px;
 }
 
 .form-signin {
-    max-width: 380px;
+    max-width: 350px;
     padding: 15px 35px 45px;
     margin: 0 auto;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .form-signin .form-signin-heading,
-
 .form-signin .form-control {
     position: relative;
     font-size: 16px;
@@ -37,17 +35,10 @@ body{
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-.form-signin .form-control:focus {
-    z-index: 2;
-}
-.form-signin input[type="text"] {
-    margin-bottom: -1px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-}
-.form-signin input[type="password"] {
+
+.form-signin input {
     margin-bottom: 20px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    border-radius: 7px;
 }
+
 /*******************************************
