--- a/public/client/views/login/login.view.html
+++ b/public/client/views/login/login.view.html
@@ -1,11 +1,15 @@
-<div class="wrapper" ng-controller="LoginController as model">
+<div class="login-padding" ng-controller="LoginController as model">
     <form class="form-signin">
         <h2 class="form-signin-heading">Login to your account</h2>
 
         <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
         <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
 
-        <h3>No account?<a>Register</a></h3>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        <h5 align="center">No account?<a style="padding-left: 3px">Register Here</a></h5>
+        <button class="btn btn-primary btn-block" type="submit">Login</button>
+
+
+
     </form>
+
 </div>
