--- a/public/client/views/register/register.view.html
+++ b/public/client/views/register/register.view.html
@@ -1,12 +1,12 @@
 <div class="login-padding" ng-controller="LoginController as model">
     <form class="form-signin">
-        <h2 class="form-signin-heading">Login to your account</h2>
+        <h2 class="form-signin-heading">Register your account</h2>
 
         <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
         <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
+        <input type="password" class="form-control" name="password" placeholder="confirm Password" required=""/>
 
-        <h5 align="center">No account?<a href="#register" style="padding-left: 3px">Register Here</a></h5>
-        <button class="btn btn-primary btn-block" type="submit">Login</button>
+        <button class="btn btn-primary btn-block" type="submit">Register</button>
 
 
 
