register page added radio buttons

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -41,4 +41,12 @@ body{
     border-radius: 7px;
 }
 
+.radiobutton{
+    margin-bottom: 20px;
+}
+
+.rdright{
+    margin-right: 4px;
+}
+
 /*******************************************
