--- a/public/client/views/register/register.view.html
+++ b/public/client/views/register/register.view.html
@@ -1,4 +1,4 @@
-<div class="login-padding" ng-controller="LoginController as model">
+<div class="login-padding">
     <form class="form-signin">
         <h2 class="form-signin-heading">Register your account</h2>
 
@@ -6,7 +6,22 @@
         <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
         <input type="password" class="form-control" name="password" placeholder="confirm Password" required=""/>
 
-        <button class="btn btn-primary btn-block" type="submit">Register</button>
+
+        <div class="btn-group radiobutton"  data-toggle="buttons">
+            <!--<label class="btn btn-secondary active">-->
+                <input class="rdright" value="1" ng-model="myradio"  type="radio" name="options" id="option1" autocomplete="off"> Faculty &nbsp;&nbsp;
+            <!--</label>-->
+            <!--<label class="btn btn-secondary">-->
+                <input class="rdright" value="2" ng-model="myradio" type="radio" name="options" id="option2" autocomplete="off" > Partner &nbsp;&nbsp;
+            <!--</label>-->
+            <!--<label class="btn btn-secondary">-->
+                <input class="rdright" value="3" ng-model="myradio" type="radio" name="options" id="option3" autocomplete="off"> Admin
+            <!--</label>-->
+            <!--{{myradio}}-->
+
+
+
+        <a ng-click="model.register(myradio)" class="btn btn-primary btn-block">Register</a>
 
 
 
