made admin partner and faculty pages

--- a/public/client/views/register/register.view.html
+++ b/public/client/views/register/register.view.html
@@ -18,6 +18,7 @@
                 <input class="rdright" value="3" ng-model="myradio" type="radio" name="options" id="option3" autocomplete="off"> Admin
             <!--</label>-->
             <!--{{myradio}}-->
+        </div>
 
 
 
