--- a/public/client/views/admin/partnerDetails.view.html
+++ b/public/client/views/admin/partnerDetails.view.html
@@ -4,7 +4,7 @@
             <ul class="list-group">
                 <li  class="list-group-item">
                     <a href="#/admin/{{model.aid}}/partnerDetail/1">
-                       <b style="color: #e21a2d">PartnerNAme</b>
+                       <b style="color: #e21a2d">Partner Name</b>
                     </a>
                 </li>
                 <li  class="list-group-item">
