--- a/public/client/views/faculty/faculty.view.html
+++ b/public/client/views/faculty/faculty.view.html
@@ -1,10 +1,6 @@
-<div class="login-padding" style="margin-top: 84px !important;">
-    <form class="form-signin" style="border-radius: 48px;">
-        <h2>Faculty DashBoard</h2>
-    </form>
-
+<div class="login-padding">
 </div>
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 20px">
         <div class="row">
             <div class="col-xs col-sm col-md-2 col-lg-2 right-line">
                 <ul class="list-group">
@@ -14,143 +10,46 @@
                         </a>
                     </li>
                     <li  class="list-group-item">
-                        <a href="#/faculty/{{model.fid}}/">
-                            <b style="color: purple">Request For More Jobs</b>
+                        <a href="#/faculty/{{model.fid}}/facultyAcceptedJobs">
+                            <b style="color: purple"> Accepted Jobs</b>
+                        </a>
+                    </li>
+                    <li  class="list-group-item">
+                        <a href="#/faculty/{{model.fid}}/facultyRejectedJobs">
+                            <b style="color: purple"> Rejected Jobs</b>
+                        </a>
+                    </li>
+                    <li  class="list-group-item">
+                        <a href="#/faculty/{{model.fid}}/facultySuggestedJobs">
+                            <b style="color: purple;"> Suggested Jobs</b>
+                        </a>
+                    </li>
+                    <li  class="list-group-item">
+                        <a href="#/faculty/{{model.fid}}/facultyAllJobs">
+                            <b style="color: purple">All Jobs</b>
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="col-xs col-sm col-md-2 col-lg-2" style="background-color: white;width:1200px">
-                <div class="container">
-                    <h2>Faculty Requests</h2>
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Job</th>
-                            <th>Job Description</th>
-                            <th>Status</th>
-                            <th>Request Date</th>
-                        </tr>
-                        </thead>
-                        <tbody >
-                        <tr>
-                            <td>Parallel Data Processing</td>
-                            <td>Data Processing algorithms</td>
-                            <td>Approved<br></td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Edit</button></td>
-                        </tr>
-                        <tr>
-                            <td>Dummy 1</td>
-                            <td>Dummy 1 Desc</td>
-                            <td>Rejected</td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Edit</button></td>
+                <form name="myForm">
+                    <div class="card-body">
+                        <h4 class="card-title" align="center">My Profile</h4>
+                        <div class="card">
+                            <!--<img data-ng-src="images/photo.jpg" alt="Jose" style="width:50%">-->
+                            <h1>Jose Annunziato</h1>
+                            <p class="title">Professor</p>
+                            <p>Northeastern University</p>
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                        </div>
 
-                        </tr>
-                        <tr>
-                            <td>Dummy 2</td>
-                            <td>Dummy 2 Desc</td>
-                            <td>In-Progress</td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Edit</button></td>
-
-                        </tr>
-                        <tr>
-                            <td>Dummy 3</td>
-                            <td>Dummy 3 Desc</td>
-                            <td>Approved</td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Edit</button></td>
-
-                        </tr>
-
-                        </tbody>
-                    </table>
-                    <ul class="pagination" style="padding-left: 972px;">
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                    </ul>
-
-                    <h2>Suggested Requests</h2>
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th>Job</th>
-                            <th>Job Description</th>
-                            <th>Status</th>
-                            <th>Request Date</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>Web Development</td>
-                            <td>Web Development algorithms</td>
-                            <td><select name="singleSelect" ng-model="data.singleSelect">
-                                <option value="option-1">Approved</option>
-                                <option value="option-2">Rejected</option>
-                                <option value="option-2">In-Progress</option>
-
-                            </select><br></td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Submit</button></td>
-                        </tr>
-                        <tr >
-                            <td>Dummy 1</td>
-                            <td>Dummy 1 Desc</td>
-                            <td><select name="singleSelect" ng-model="">
-                                <option value="option-1">Approved</option>
-                                <option value="option-2">Rejected</option>
-                                <option value="option-2">In-Progress</option>
-
-                            </select><br></td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Submit</button></td>
-
-                        </tr>
-                        <tr >
-                            <td>Dummy 2</td>
-                            <td>Dummy 2 Desc</td>
-                            <td><select name="singleSelect" ng-model="">
-                                <option value="option-1">Approved</option>
-                                <option value="option-2">Rejected</option>
-                                <option value="option-2">In-Progress</option>
-
-                            </select><br></td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Submit</button></td>
-
-                        </tr>
-                        <tr >
-                            <td>Dummy 3</td>
-                            <td>Dummy 3 Desc</td>
-                            <td><select name="singleSelect" ng-model="">
-                                <option value="option-1">Approved</option>
-                                <option value="option-2">Rejected</option>
-                                <option value="option-2">In-Progress</option>
-
-                            </select><br></td>
-                            <td>01-Jan-2017</td>
-                            <td><button ng-click>Submit</button></td>
-
-                        </tr>
-
-                        </tbody>
-                    </table>
-                    <ul class="pagination" style="padding-left: 972px;">
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                    </ul>
-                </div>
+                    </div>
+                </form>
 
             </div>
-        </div>
-
-
-    </div>
+ </div>
+</div>
+</div>
