corrected admin-partner details page

--- a/public/client/views/admin/partnerDetails.view.html
+++ b/public/client/views/admin/partnerDetails.view.html
@@ -23,8 +23,8 @@
                     </a>
                 </li>
                 <li  class="list-group-item">
-                    <a href="#/admin/{{model.aid}}/partnerDetail/1/underConsiderationProposals">
-                        Proposals Under-Consideration
+                    <a href="#/admin/{{model.aid}}/partnerDetail/1/newProposals">
+                        New Proposals
                     </a>
                 </li>
             </ul>
