--- a/public/client/views/admin/partnerSpecificAllProposals.view.html
+++ b/public/client/views/admin/partnerSpecificAllProposals.view.html
@@ -73,7 +73,7 @@
             <div class="card text-white bg-info mb-3" style="max-width: 200rem;">
                 <div class="card-header">Partner 1</div>
                 <p class="navbar-text pull-right" >
-                    <a href="#/user/{{model.id}}/website/new" class="navbar-link">
+                    <a href="#/admin/1/partnerDetail/2/createNewProposals" class="navbar-link">
                          <span class="glyphicon glyphicon-chevron-right"></span>
                     </a></p>
                 <div class="card-body">
