--- a/public/client/views/admin/partnerDetails.view.html
+++ b/public/client/views/admin/partnerDetails.view.html
@@ -1,6 +1,6 @@
 <div class="container-fluid login-padding">
     <div class="row">
-        <div class="col-xs col-sm col-md-2 col-lg-2 right-line">
+        <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 right-line">
             <ul class="list-group">
                 <li  class="list-group-item">
                     <a href="#/admin/{{model.aid}}/partnerDetail/1">
@@ -30,7 +30,7 @@
             </ul>
         </div>
 
-        <div class="col-xs-11 col-sm-12 col-md-7 col-lg-7">
+        <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
 
             <form name="myForm">
                 <div class="card-body">
