--- a/public/client/views/faculty/facultyAllJobs.view.html
+++ b/public/client/views/faculty/facultyAllJobs.view.html
@@ -2,7 +2,7 @@
     </form>
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row">
-            <div class="col-xs col-sm col-md-2 col-lg-2 right-line">
+            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 right-line">
                 <ul class="list-group">
                     <li  class="list-group-item">
                         <a href="#/faculty/{{model.fid}}/facultyProfile">
@@ -31,7 +31,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-xs col-sm col-md-2 col-lg-2" style="background-color: white;width:1200px">
+            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7" style="background-color: white">
                 <div class="container">
                     <h2>All Jobs</h2>
                     <div class="card text-white bg-success mb-3" style="max-width: 200rem;">
