--- a/public/client/views/faculty/facultyRejectedJobs.view.html
+++ b/public/client/views/faculty/facultyRejectedJobs.view.html
@@ -1,7 +1,7 @@
 <div class="login-padding">
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row">
-            <div class="col-xs col-sm col-md-2 col-lg-2 right-line">
+            <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 right-line">
                 <ul class="list-group">
                     <li  class="list-group-item">
                         <a href="#/faculty/{{model.fid}}/facultyProfile">
@@ -30,7 +30,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-xs col-sm col-md-2 col-lg-2" style="background-color: white;width:1200px">
+            <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7" style="background-color: white">
                 <div class="container">
                     <h2>Rejected Jobs</h2>
                     <div class="card text-white bg-danger mb-3" style="max-width: 200rem;">
