admin few more pages added

--- a/public/client/views/admin/partnerDetails.view.html
+++ b/public/client/views/admin/partnerDetails.view.html
@@ -28,7 +28,17 @@
                     </a>
                 </li>
             </ul>
+
+            <ul class="list-group">
+                <li  class="list-group-item">
+                    <a href="#/admin/{{model.aid}}/adminPartnerAllProposals">
+                        <b style="color: #e21a2d">All Partner Proposals</b>
+                    </a>
+                </li>
+            </ul>
+
         </div>
+
 
         <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
 
