--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -14,7 +14,7 @@
             Partner List
 
         </a>
-        <a href="#/admin/{{model.aid}}/facultyList" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
+        <a href="#/admin/{{model.aid}}/adminPartnerAllProposals" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
             Partner Proposals
 
         </a>
