--- a/public/client/views/admin/partnerSpecificAcceptedProposals.view.html
+++ b/public/client/views/admin/partnerSpecificAcceptedProposals.view.html
@@ -40,6 +40,14 @@
                     </a>
                 </li>
             </ul>
+
+            <ul class="list-group">
+                <li  class="list-group-item">
+                    <a href="#/admin/{{model.aid}}/adminPartnerAllProposals">
+                        <b style="color: #e21a2d">All Partner Proposals</b>
+                    </a>
+                </li>
+            </ul>
         </div>
 
         <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
@@ -56,7 +64,7 @@
                             <h4 class="card-title"> Accepted project proposal 1</h4>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-        </div>
+        <!--</div>-->
         <div class="card text-white bg-success mb-3" style="max-width: 200rem;">
             <div class="card-header">Partner 1</div>
             <p class="navbar-text pull-right">
