--- a/public/client/views/faculty/facultySuggestedJobs.view.html
+++ b/public/client/views/faculty/facultySuggestedJobs.view.html
@@ -31,8 +31,8 @@
                 </li>
             </ul>
         </div>
-        <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7" style="background-color: white">
-            <div class="container">
+        <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7" >
+            <div class="container" style="background-color: white">
                 <h2>Suggested Jobs</h2>
                 <div class="card text-white bg-warning mb-3" style="max-width: 200rem;">
                     <div class="card-header">Job 1</div>
