--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -1,6 +1,6 @@
 
 
-<p align="center" class="login-padding">
+<p align="center" class="header-padding">
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
         Partner
     </button>
