--- a/public/client/views/admin/partnerDetails.view.html
+++ b/public/client/views/admin/partnerDetails.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid login-padding">
+<div class="container-fluid header-padding">
     <div class="row">
         <div class="col-xs col-sm col-md-2 col-lg-2 right-line">
             <ul class="list-group">
