--- a/public/client/views/admin/partnerList.view.html
+++ b/public/client/views/admin/partnerList.view.html
@@ -1,4 +1,4 @@
-<div class="login-padding">
+<div class="header-padding">
 
     <ul class="list-group">
         <a href="#/admin/{{model.aid}}/partnerDetail/1" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
