--- a/public/client/views/faculty/facultyAllJobs.view.html
+++ b/public/client/views/faculty/facultyAllJobs.view.html
@@ -1,4 +1,4 @@
-<div class="login-padding">
+<div class="header-padding">
     </form>
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row">
