--- a/public/client/views/login/login.view.html
+++ b/public/client/views/login/login.view.html
@@ -1,13 +1,22 @@
-<div class="login-padding" ng-controller="LoginController as model">
+<div class="header-padding" ng-controller="LoginController as model">
+
     <form class="form-signin">
-        <h2 class="form-signin-heading">Login to your account</h2>
+
+        <h2 class="form-signin-heading" style="color:#e21a2d">Login to your account</h2>
 
         <input type="text" ng-model="userEmail" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
         <input type="password" ng-model="password" class="form-control" name="password" placeholder="Password" required=""/>
 
-        <h5 align="center">No account?<a href="#register" style="padding-left: 3px">Register Here</a></h5>
-        <a ng-click="model.login(userEmail,password)" class="btn btn-primary btn-block" >Login</a>
+        <h5 align="center" style="padding-bottom: 10px"><a href="">Forgot Password</a></h5>
 
+        <button ng-click="model.login(userEmail,password)" class="btn redBG btn-danger btn-block">Login</button>
+
+        <div style="padding-top:10px;padding-bottom: 0px; width:100%">
+            <h5 align="center" style="padding-top: 15px; margin-bottom: -30px">
+                No account?
+                <a href="#register" style="padding-left: 3px">Register Here</a>
+            </h5>
+        </div>
     </form>
 
 </div>
