--- a/public/client/views/register/register.view.html
+++ b/public/client/views/register/register.view.html
@@ -1,10 +1,11 @@
-<div class="login-padding">
+<div class="header-padding">
     <form class="form-signin">
-        <h2 class="form-signin-heading">Register your account</h2>
+
+        <h2 class="form-signin-heading" style="color:#e21a2d">Create an account</h2>
 
         <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
         <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
-        <input type="password" class="form-control" name="password" placeholder="confirm Password" required=""/>
+        <input type="password" class="form-control" name="password" placeholder="Confirm Password" required=""/>
 
 
         <div class="btn-group radiobutton"  data-toggle="buttons">
@@ -21,10 +22,7 @@
         </div>
 
 
-
-        <a ng-click="model.register(myradio)" class="btn btn-primary btn-block">Register</a>
-
-
+        <a ng-click="model.register(myradio)" class="btn redBG btn-danger btn-block">Register</a>
 
     </form>
 
