admin-faculty  added

--- a/public/client/views/admin/adminPartnerAllProposals.view.html
+++ b/public/client/views/admin/adminPartnerAllProposals.view.html
@@ -52,7 +52,7 @@
                 <div class="card text-white bg-success mb-3" style="max-width: 200rem;">
                     <div class="card-header">Partner 1</div>
                     <p class="navbar-text pull-right">
-                        <a href="#/user/{{model.id}}/website/new" class="navbar-link">
+                        <a href="#/admin/{{model.aid}}/adminProposalDetailsEdit/1" class="navbar-link">
           <span class="glyphicon glyphicon-cog">
           </span>
                         </a></p>
@@ -76,7 +76,7 @@
                 <div class="card text-white bg-info mb-3" style="max-width: 200rem;">
                     <div class="card-header">Partner 3</div>
                     <p class="navbar-text pull-right" >
-                        <a href="#/admin/1/partnerDetail/2/createNewProposals" class="navbar-link">
+                        <a href="#/admin/{{model.aid}}/adminProposalDetailsNew/1" class="navbar-link">
                             <span class="glyphicon glyphicon-chevron-right"></span>
                         </a></p>
                     <div class="card-body">
