--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -99,3 +99,32 @@ body{
 }
 
 /*******************************************/
+.right-line1{
+    height: 70vh;
+    border-right: 2px solid lightgrey;
+    margin-top: -12px;
+    padding-top: 10px;
+}
+
+
+#mainMenuBar {
+    /*background: linear-gradient(to bottom right, #30273a, #8d78a5);*/
+    padding: 5px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    resize: none;
+    /*border:1px solid #30273a;*/
+    /*box-shadow: 0 0 10px #8d78a5;*/
+    border-radius: 15px 15px 15px 15px;
+}
+
+#content {
+    margin: 0 auto;
+    margin-top: 100px; // former 250px
+padding: 0;
+    width: 750px;
+    max-width: 80%;
+    padding-bottom: 40px;
+    text-align: center;
+}
