--- a/public/client/views/admin/facultyDetails.view.html
+++ b/public/client/views/admin/facultyDetails.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid login-padding">
+<div class="container-fluid login-padding" style="margin-top: 100px">
     <div class="row">
         <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2 right-line">
             <ul class="list-group">
