--- a/public/client/views/admin/facultyList.view.html
+++ b/public/client/views/admin/facultyList.view.html
@@ -1,4 +1,4 @@
-<div class="login-padding">
+<div class="login-padding" style="margin-top: 140px">
 
     <ul class="list-group">
         <a href="#/admin/{{model.aid}}/facultyDetail/1" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
