admin partner sample view created

--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -8,7 +8,7 @@
     <!--<a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/adminPartnerAllProposals">-->
 
 <p align="center" class="header-padding">
-    <a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/adminPartnerAllProposals">
+    <a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/adminPartnerList">
         Partner
     </a>
     <a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/facultyList">
