--- a/public/client/views/admin/partnerList.view.html
+++ b/public/client/views/admin/partnerList.view.html
@@ -1,27 +1,48 @@
-<div class="header-padding">
 
-    <ul class="list-group">
-        <a href="#/admin/{{model.aid}}/partnerDetail/1" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
-            Partner 1
 
-        </a>
-        <a href="#/admin/{{model.aid}}/partnerDetail/2" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
-            Partner 2
+<div id="content">
+    <div id="mainBox" class="textBox">
+        <div id="mainMenuBar">
+            <a class="btn btn-primary ">In Progress</a>
+            <a class="btn btn-primary ">Submitted</a>
+            <!--<a class="btn btn-primary ">Login</a>-->
+        </div>
+    </div>
+</div>
 
-        </a>
-        <a href="#/admin/{{model.aid}}/partnerDetail/3" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
-            Partner 3
 
-        </a>
-        <a href="#/admin/{{model.aid}}/partnerDetail/4" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
-            Partner 4
+<div class="container-fluid" style="margin-top: 100px">
 
-        </a>
-        <a href="#/admin/{{model.aid}}/partnerDetail/5" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">
-            Partner 5
+    <div class="col-md-2 right-line1">
+        <ul class="list-group">
+            <li class="list-group-item active">
+                <a style="color: white" href="#/admin/1/adminPartnerList/1">Cras justo odio</a>
+            </li>
+            <li class="list-group-item">
+                <a href="#/admin/1/adminPartnerList/1">Dapibus ac facilisis in</a>
+            </li>
+            <li class="list-group-item">
+                <a href="#/admin/1/adminPartnerList/1">Morbi leo risus</a>
+            </li>
+            <li class="list-group-item">
+                <a href="#/admin/1/adminPartnerList/1">Porta ac consectetur ac</a>
+            </li>
+            <li class="list-group-item">
+                <a href="#/admin/1/adminPartnerList/1">Vestibulum at eros</a>
+            </li>
+        </ul>
 
-        </a>
+    </div>
 
-    </ul>
+    <div class="col-md-4 right-line1">
+
+
+    </div>
+
+    <div class="col-md-6 right-line1">
+
+
+    </div>
+
 
 </div>
