--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -1,9 +1,7 @@
 
-
-
 <p align="center" class="login-padding">
     <!--<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">-->
-        <!--Partner-->
+    <!--Partner-->
     <!--</button>-->
     <!--<a class="btn btn-primary" type="button" href="#/admin/{{model.aid}}/adminPartnerAllProposals">-->
 
@@ -16,6 +14,27 @@
     </a>
 </p>
 <!--<div class="collapse" id="collapseExample" align="">-->
+<!--<ul class="list-group">-->
+<!--<a href="#/admin/{{model.aid}}/partnerList" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">-->
+<!--Partner List-->
+
+<!--</a>-->
+<!--<a href="#/admin/{{model.aid}}/adminPartnerAllProposals" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">-->
+<!--Partner Proposals-->
+
+<!--</a>-->
+
+<!--</ul>-->
+<!--</div>-->
+<!--<p align="center" class="header-padding">-->
+    <!--<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">-->
+        <!--Partner-->
+    <!--</button>-->
+    <!--<a class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">-->
+        <!--Faculty-->
+    <!--</a>-->
+<!--</p>-->
+<!--<div class="collapse" id="collapseExample" align="">-->
     <!--<ul class="list-group">-->
         <!--<a href="#/admin/{{model.aid}}/partnerList" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">-->
             <!--Partner List-->
@@ -23,9 +42,45 @@
         <!--</a>-->
         <!--<a href="#/admin/{{model.aid}}/adminPartnerAllProposals" class="list-group-item d-flex justify-content-between align-items-center" style="text-align: center">-->
             <!--Partner Proposals-->
-
         <!--</a>-->
 
     <!--</ul>-->
 <!--</div>-->
+<div class="container" style="background-color:white">
+    <h2 style="color:green;font-weight: 100">{{model.message.note}}</h2>
+    <h2>Registration Requests</h2>
+    <div class="table-responsive">
+        <table class="table table-hover" border="1">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Username</th>
+                <th>Role</th>
+                <th>Status</th>
+                <th>Created Date</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="user in model.users track by $index">
+                <th scope="row">{{$index+1}}</th>
+                <td>{{user.firstname}}</td>
+                <td>{{user.lastname}}</td>
+                <td>{{user.username}}</td>
+                <td><span>{{user.role}}</span>
+                <td><span>{{user.status}}</span>
+                <td>{{user.createdDate}}</td>
+                <td><button ng-if="user.status =='P'" ng-click="model.activateRejectUser(user,'A','0')">Activate</button>
+                    <button ng-if="user.status =='P'" ng-click="model.activateRejectUser(user,'D','1')">Reject</button>
+                    <span ng-if="user.status =='D' && user.reason != 'null' && !user.reject">Rejected reason : {{user.reason}}</span>
+                    <button ng-if="user.status =='D'" ng-show="user.reject" ng-click="model.activateRejectUser(user,'D','2')">Submit</button>
+                    <button ng-if="user.status =='D'" ng-show="user.reject" ng-click="model.rejectUserCancel(user,'D','2')">Cancel</button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 
