--- a/public/client/views/login/login.view.html
+++ b/public/client/views/login/login.view.html
@@ -3,6 +3,7 @@
     <form class="form-signin">
 
         <h2 class="form-signin-heading" style="color:#e21a2d">Login to your account</h2>
+        <h6>{{model.message}}</h6>
 
         <input type="text" ng-model="userEmail" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
         <input type="password" ng-model="password" class="form-control" name="password" placeholder="Password" required=""/>
@@ -10,6 +11,7 @@
         <h5 align="center" style="padding-bottom: 10px"><a href="">Forgot Password</a></h5>
 
         <button ng-click="model.login(userEmail,password)" class="btn redBG btn-danger btn-block">Login</button>
+        <button ng-click="model.createUsers()" class="btn redBG btn-danger btn-block">Data Patch</button>
 
         <div style="padding-top:10px;padding-bottom: 0px; width:100%">
             <h5 align="center" style="padding-top: 15px; margin-bottom: -30px">
