--- a/public/client/views/register/register.view.html
+++ b/public/client/views/register/register.view.html
@@ -3,20 +3,25 @@
 
         <h2 class="form-signin-heading" style="color:#e21a2d">Create an account</h2>
 
-        <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
-        <input type="password" class="form-control" name="password" placeholder="Password" required=""/>
-        <input type="password" class="form-control" name="password" placeholder="Confirm Password" required=""/>
+        <span style="color: green;">{{model.message}}</span>
+        <br>
+        <input type="text" class="form-control" name="firstname" placeholder="Firstname" ng-model="firstname" required="" autofocus="" />
+        <input type="text" class="form-control" name="lastname" placeholder="Lastname" ng-model="lastname" required="" autofocus="" />
+
+        <input type="text" class="form-control" name="username" placeholder="Email Address" ng-model="username" required="" autofocus="" />
+        <input type="password" class="form-control" name="password" placeholder="Password" ng-model="password" required=""/>
+        <input type="password" class="form-control" name="password" placeholder="Confirm Password" ng-model="passwordRe" required=""/>
 
 
         <div class="btn-group radiobutton"  data-toggle="buttons">
             <!--<label class="btn btn-secondary active">-->
-                <input class="rdright" value="1" ng-model="myradio"  type="radio" name="options" id="option1" autocomplete="off"> Faculty &nbsp;&nbsp;
+            <input class="rdright" ng-value="1"  ng-model="myradio" type="radio" name="options" id="option1" autocomplete="off"> Faculty &nbsp;&nbsp;
             <!--</label>-->
             <!--<label class="btn btn-secondary">-->
-                <input class="rdright" value="2" ng-model="myradio" type="radio" name="options" id="option2" autocomplete="off" > Partner &nbsp;&nbsp;
+            <input class="rdright" ng-value="2" ng-model="myradio" type="radio" name="options" id="option2" autocomplete="off" > Partner &nbsp;&nbsp;
             <!--</label>-->
             <!--<label class="btn btn-secondary">-->
-                <input class="rdright" value="3" ng-model="myradio" type="radio" name="options" id="option3" autocomplete="off"> Admin
+            <input class="rdright" ng-value="3" ng-model="myradio" type="radio" name="options" id="option3" autocomplete="off"> Admin
             <!--</label>-->
             <!--{{myradio}}-->
         </div>
