--- a/public/client/views/header/header.view.html
+++ b/public/client/views/header/header.view.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <body ng-controller="HeaderController as model">
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class=" header-style navbar navbar-inverse navbar-fixed-top" role="navigation">
 
     <div class="navbar-header">
         <a href="#/home" class="navbar-brand">Service Learning@<i>Northeastern University</i></a>
     </div>
     <!-- Top Menu Items -->
-    <ul class="nav navbar-right top-nav text-nowrap" ng-controller="HeaderController as model">
+    <ul class="header-style nav navbar-right top-nav text-nowrap" ng-controller="HeaderController as model">
 
         <!--<li ng-show = "currentUser">
             <a href="#/home"><i class="fa fa-home" aria-hidden="true"> Home</i></a>
