--- a/public/client/views/register/register.view.html
+++ b/public/client/views/register/register.view.html
@@ -3,6 +3,7 @@
 
         <h2 class="form-signin-heading" style="color:#e21a2d">Create an account</h2>
 
+        <div ng-show="model.message" class="alert alert-danger width-class" role="alert">{{model.message}}</div>
 
         <ul class="nav nav-tabs">
             <li class="active">
@@ -21,6 +22,7 @@
                 <div class="form-group" style="padding-top: 20px">
                     <select class="form-control" ng-model="model.partner.orgId">
                         <option value="" disabled selected>Please select your Organization</option>
+                        <option value="0">Service-Learning</option>
                         <option value="1">BalletRox</option>
                         <option value="2">826 Boston</option>
                         <option value="3">Boston Cares</option>
@@ -34,7 +36,7 @@
                 <input type="text" class="form-control" placeholder="FirstName" ng-model="model.partner.firstName" required="" autofocus="" />
                 <input type="text" class="form-control" placeholder="LastName" ng-model="model.partner.lastName" required="" autofocus="" />
 
-                <input type="text" class="form-control" placeholder="Email Address" ng-model="model.partner.emailId" required="" autofocus="" />
+                <input type="text" class="form-control" placeholder="Email Address" ng-model="model.partner.username" required="" autofocus="" />
                 <input type="password" class="form-control" name="Password" placeholder="Password" ng-model="model.partner.password" required=""/>
 
                 <a ng-click="model.registerPartner(model.partner)" class="btn redBG btn-danger btn-block">Register</a>
@@ -44,13 +46,12 @@
             <div class="tab-pane" id="facultyInfo">
 
                 <div style="padding-top: 20px">
-                    <input type="text" class="form-control" name="firstname" placeholder="Firstname" ng-model="firstname" required="" autofocus="" />
-                    <input type="text" class="form-control" name="lastname" placeholder="Lastname" ng-model="lastname" required="" autofocus="" />
+                    <input type="text" class="form-control" name="firstname" placeholder="FirstName" ng-model="model.faculty.firstName" required="" autofocus="" />
+                    <input type="text" class="form-control" name="lastname" placeholder="LastName" ng-model="model.faculty.lastName" required="" autofocus="" />
+                    <input type="text" class="form-control" name="username" placeholder="Email Address" ng-model="model.faculty.username" required="" autofocus="" />
+                    <input type="password" class="form-control" name="password" placeholder="Password" ng-model="model.faculty.password" required=""/>
 
-                    <input type="text" class="form-control" name="username" placeholder="Email Address" ng-model="username" required="" autofocus="" />
-                    <input type="password" class="form-control" name="password" placeholder="Password" ng-model="password" required=""/>
-
-                    <a ng-click="model.register(myradio)" class="btn redBG btn-danger btn-block">Register</a>
+                    <a ng-click="model.registerFaculty(model.faculty)" class="btn redBG btn-danger btn-block">Register</a>
                 </div>
 
             </div>
