--- a/public/client/views/faculty/faculty.view.html
+++ b/public/client/views/faculty/faculty.view.html
@@ -37,7 +37,7 @@
                         <h4 class="card-title" align="center">My Profile</h4>
                         <div class="card">
                             <!--<img data-ng-src="images/photo.jpg" alt="Jose" style="width:50%">-->
-                            <h1>Jose Annunziato</h1>
+                            <h1>{{model.user.username}}</h1>
                             <p class="title">Professor</p>
                             <p>Northeastern University</p>
                             <a href="#"><i class="fa fa-dribbble"></i></a>
