change in config.js, admin view, registration controller to facilitate faculty authentication

--- a/public/client/views/admin/admin.view.html
+++ b/public/client/views/admin/admin.view.html
@@ -39,7 +39,7 @@
                 <td>{{user.createdDate}}</td>
                 <td><button ng-if="user.status =='NoStatus'" ng-click="model.activateRejectUser(user,'Approved','0')">Activate</button>
                     <button ng-if="user.status =='NoStatus'" ng-click="model.activateRejectUser(user,'Rejected','1')">Reject</button>
-                    <span ng-if="user.status =='Rejected' && !user.reject">Rejected reason : {{user.reason}}</span>
+                    <span ng-if="user.status =='Rejected' && !user.reject"></span>
                     <button ng-if="user.status =='Rejected'" ng-show="user.reject" ng-click="model.activateRejectUser(user,'Rejected','2')">Submit</button>
                     <button ng-if="user.status =='Rejected'" ng-show="user.reject" ng-click="model.rejectUserCancel(user,'Rejected','2')">Cancel</button>
                 </td>
